@@ -11,6 +11,7 @@ Version 1.5.3-dev (development of upcoming release)
 * Refactor: Remove class OrderedSet
 * Refactor: Remove os.system() from class Execute
 * Refactor: Systray notifications send utilize DBUS instead of notify-send (#1156) (Felix Stupp @Zocker1999NET)
+* Dependency: Remove libnotify-bin (notify-send) (#1156)
 
 Version 1.5.2 (2024-08-06)
 * Fix: Ensure crontab with ending newline (#781)
